// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HdBadge modifier variations should render with \`badge--disabled\` class if modifier is set to disabled 1`] = `
<div class="badge badge--disabled badge--with-details"><span class="badge__label"><svg xmlns="http://www.w3.org/2000/svg" class="badge__icon"><circle cx="7" cy="7" r="7" fill="currentColor"></circle></svg>
    test label
    <hdicon-stub src="" transform="rotate(90)" class="badge__chevron"></hdicon-stub></span>
  <p class="badge__details">test <strong>badge</strong> details!</p>
</div>
`;

exports[`HdBadge modifier variations should render with \`badge--primary\` class if modifier is set to primary 1`] = `
<div class="badge badge--primary badge--with-details"><span class="badge__label"><svg xmlns="http://www.w3.org/2000/svg" class="badge__icon"><circle cx="7" cy="7" r="7" fill="currentColor"></circle></svg>
    test label
    <hdicon-stub src="" transform="rotate(90)" class="badge__chevron"></hdicon-stub></span>
  <p class="badge__details">test <strong>badge</strong> details!</p>
</div>
`;

exports[`HdBadge modifier variations should render with \`badge--secondary\` class if modifier is set to secondary 1`] = `
<div class="badge badge--secondary badge--with-details"><span class="badge__label"><svg xmlns="http://www.w3.org/2000/svg" class="badge__icon"><circle cx="7" cy="7" r="7" fill="currentColor"></circle></svg>
    test label
    <hdicon-stub src="" transform="rotate(90)" class="badge__chevron"></hdicon-stub></span>
  <p class="badge__details">test <strong>badge</strong> details!</p>
</div>
`;

exports[`HdBadge modifier variations should render with \`badge--tertiary\` class if modifier is set to tertiary 1`] = `
<div class="badge badge--tertiary badge--with-details"><span class="badge__label"><svg xmlns="http://www.w3.org/2000/svg" class="badge__icon"><circle cx="7" cy="7" r="7" fill="currentColor"></circle></svg>
    test label
    <hdicon-stub src="" transform="rotate(90)" class="badge__chevron"></hdicon-stub></span>
  <p class="badge__details">test <strong>badge</strong> details!</p>
</div>
`;

exports[`HdBadge should render 1`] = `
<div class="badge badge--with-details"><span class="badge__label"><svg xmlns="http://www.w3.org/2000/svg" class="badge__icon"><circle cx="7" cy="7" r="7" fill="currentColor"></circle></svg>
    test label
    <hdicon-stub src="" transform="rotate(90)" class="badge__chevron"></hdicon-stub></span>
  <p class="badge__details">test <strong>badge</strong> details!</p>
</div>
`;
